--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Innovator's nexus"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/innovator_s_nexus_logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/innovator_s_nexus_logo.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
